--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite" , "build": "vite build",
     "dev": "vite",
-    "build": "vite build",
+    
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "vite"
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "react": "^18.3.1",
