--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
